--- a/index.html
+++ b/index.html
@@ -2,19 +2,39 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Sailaway</title>
+  <title>Ansa Davis</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+    <script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <style>
     body {
-        background: #fafafa;
+        background: #F3E5F5;
+        font-family: 'Rubik Mono One', sans-serif;
 }
   </style>
+  <script>
+  function removeOverlay() {
+    setTimeout(function(){
+      $(".birthday-overlay").css("display","none");
+    }, 5000);
+  }
+</script>
 </head>
-<body>
+<body onload="removeOverlay()">
+  <div class="birthday-overlay cover-image" >
+    <h1 class="birthday-wish">Happy Birthday</h1>
+    <h1 class="birthday-wish">Ansa Davis</h1>
+  </div>
   <app-root>Loading...</app-root>
+
 <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
